fix layout overlap

--- a/src/theme/index.less
+++ b/src/theme/index.less
@@ -8,30 +8,37 @@
 @input-bg: #eee;
 @btn-padding-base : 6px 15px;
 
-// customize
-.ivu-layout-sider, .ivu-menu, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-item,
-.ivu-menu-submenu-title,
-.ivu-menu-submenu,
-.ivu-menu-item-active,
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item,
+
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu){
+    color:#fff
+}
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item:hover, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title:hover{
+    // background: #155d78
+
+}
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu){
+    // background: none;
+    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%);
+}
+.ivu-menu-item-active:not(.ivu-menu-submenu):hover{
+    // background: #155d78
+}
+.ivu-page.mini .ivu-page-item{
+    border-radius: 50%
+}
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu),.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu):hover{
+    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%)!important;
+
+}
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item-active{
+    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%);
+}
+.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item{
+    // background: #155d78
+}
 .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item:hover{
-  background-color: rgb(0,108,175)!important;
-  background-image: none!important;
-}
-.ivu-layout-sider-zero-width-trigger{
-  display: none;
-}
-.ivu-menu-item,
-.ivu-menu-submenu-title{
-  text-align: left;
-  font-size: 18px;
-  padding-left: 16px!important;
-  padding-right: 0px!important;
-}
-.ivu-menu-submenu .ivu-menu-item{
-  padding-left: 30px!important;
-  padding-top: 0px;
-  font-size: 16px;
+    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%)!important;
+
 }
 
 // screen
@@ -74,39 +81,4 @@
     background-color: #fff;
     padding: 34px 23px;
   }
-
-}
-
-
-// end
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu), .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title-active:not(.ivu-menu-submenu){
-    color:#fff
-}
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item:hover, .ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu-title:hover{
-    // background: #155d78
-
-}
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu){
-    // background: none;
-    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%);
-}
-.ivu-menu-item-active:not(.ivu-menu-submenu):hover{
-    // background: #155d78
-}
-.ivu-page.mini .ivu-page-item{
-    border-radius: 50%
-}
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu),.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu):hover{
-    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%)!important;
-
-}
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item-active{
-    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%);
-}
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-item{
-    // background: #155d78
-}
-.ivu-menu-dark.ivu-menu-vertical .ivu-menu-submenu .ivu-menu-item:hover{
-    // background-image:linear-gradient(to right, #2c91ac 0%, #155d78 100%)!important;
-
 }
